Fix some spelling mistakes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
 							<li>Windows</li>
 							<li>MySQL</li>
 							<li>MongoDB</li>
-							<li>GIT
+							<li>GIT</li>
+							<li>PHPUnit</li>
+							<li>Codeception</li>
 							<li>Photoshop</li>
 							<li>LaTeX</li>
 							<li>Composer</li>
@@ -98,9 +100,9 @@
 					<section class="intro">
 						<p>Hi there! My name is Jens Herlevsen and I'm a full stack web developer from Copehagen, Denmark.</p>
 						
-						<p>I study Computer Science at KEA, but actually consider most of my knowledge self-taught. My preferred programming language for the web is PHP, and i love the the PHP community and the large eco-system of open source libraries available for it. At your left, you will find a lot of the software, tools, languages, framework and so on, that i've touched upon in the past years. Even though i consider myself a full stack developer, my passion is with backend development.</p>
+						<p>I study Computer Science at KEA, but actually consider most of my knowledge self-taught. My preferred programming language for the web is PHP, and I love the PHP community and the large eco-system of open source libraries available for it. At your left, you will find a lot of the software, tools, languages, frameworks and so on, that I've touched upon in the past years. Even though I consider myself a full stack developer, my passion is with backend development.</p>
 						
-						<p>Right now I'm looking for an internship at a Copenhagen based Company, that does web development in an agile way. If i might be of interest to your company, please do contact me.</p>
+						<p>Right now I'm looking for an internship at a Copenhagen based Company, that does web development in an agile way. If I might be of interest to your company, please do contact me.</p>
 					</section>
 
 					<section class="projects">
