Add age and full name

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 								<i class="fa fa-linkedin"></i>
 								<a href="http://linkedin.com/in/jensherlevsen" target="_blank">linkedin.com/in/jensherlevsen</a>
 							</li>
+							<li class="dob">
+								<i class="fa fa-calendar"></i>
+								16/09-1990
+							</li>
 							<li class="place">
 								<i class="fa fa-map-marker"></i>
 								Copenhagen
@@ -98,11 +102,11 @@
 					<div class="caption">Full Stack Web Developer</div>
 
 					<section class="intro">
-						<p>Hi there! My name is Jens Herlevsen and I'm a full stack web developer from Copehagen, Denmark.</p>
+						<p>Hi there! My name is Jens Ahlsten Herlevsen and I'm a full stack web developer from Copehagen, Denmark.</p>
 						
 						<p>I study Computer Science at KEA, but actually consider most of my knowledge self-taught. My preferred programming language for the web is PHP, and I love the PHP community and the large eco-system of open source libraries available for it. At your left, you will find a lot of the software, tools, languages, frameworks and so on, that I've touched upon in the past years. Even though I consider myself a full stack developer, my passion is with backend development.</p>
 						
-						<p>Right now I'm looking for an internship at a Copenhagen based Company, that does web development in an agile way. If I might be of interest to your company, please do contact me.</p>
+						<p>Right now I'm looking for an internship at a Copenhagen based Company, that does web development in an agile way. If I might be of interest to your company, please do not hesitate to contact me.</p>
 					</section>
 
 					<section class="projects">
