--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 							<li>Java</li>
 							<li>Swift</li>
 							<li>Javascript</li>
+							<li>Node.js</li>
 							<li>HTML</li>
 							<li>CSS</li>
 						</ul>
@@ -65,6 +66,8 @@
 							<li>Laravel</li>
 							<li>Symfony</li>
 							<li>Doctrine ORM</li>
+							<li>React</li>
+							<li>React Native</li>
 							<li>jQuery</li>
 							<li>Bootstrap</li>
 							<li>Spring</li>
@@ -83,13 +86,13 @@
 							<li>MongoDB</li>
 							<li>GIT</li>
 							<li>PHPUnit</li>
+							<li>Webpack</li>
 							<li>Codeception</li>
 							<li>Photoshop</li>
 							<li>LaTeX</li>
 							<li>Composer</li>
 							<li>Maven</li>
 							<li>Apache Server</li>
-							<li>REST Api</li>
 							<li>SASS</li>
 							<li>LESS</li>
 						</ul>
@@ -117,11 +120,29 @@
 										<img src="musikilejet.jpg">
 									</a>
 									<div class="description">
-										I have been on board the biggest music festival in North Zealand, leading the development and maintaining the website musikilejet.dk. The site is backed by Drupal.
+										I am on board the biggest music festival in North Zealand, leading the development and maintaining the website musikilejet.dk. The site is backed by the PHP framework Laravel.
 									</div>
 								</li>
 							</ul>
 							
+					</section>
+
+					<section class="Work experience">
+						<h2 class="beam">Relevant work experience</h2>
+						<ul>
+							<li>
+								<h3>Cloudhuset <span class="year">2017-NOW</span></h3>
+								<div class="job">Backend Developer</div>
+							</li>
+							<li>
+								<h3>Ageras A/S <span class="year">2016-2017</span></h3>
+								<div class="job">Backend &amp; frontend development</div>
+							</li>
+							<li>
+								<h3>High School (HF) <span class="year">2014-NOW</span></h3>
+								<div class="job">Owner &amp; developer</div>
+							</li>
+						</ul>
 					</section>
 
 					<section class="education">
